# open-vocab-perception

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_fp16.json  benchmark_results.json  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_grounding_dino_sandbox.ipynb  02_sam2_sandbox.ipynb  03_sam2_video_sandbox.ipynb
src/ovp/core/: __init__.py  interfaces.py  registry.py  types.py
src/ovp/detectors/: grounding_dino.py
src/ovp/io/: readers.py  writers.py
src/ovp/pipeline/: image_pipeline.py  video_pipeline.py
src/ovp/scripts/: benchmark.py  run_image.py  run_video.py
src/ovp/segmenters/: sam2.py
src/ovp/trackers/: bytetrack.py
src/ovp/viz/: annotators.py
tests/: conftest.py  test_annotator.py  test_bytetracker.py  test_image_pipeline.py  test_registry.py  test_tracker.py  test_types.py  test_video_pipeline.py
